--- a/assets/styles.css
+++ b/assets/styles.css
@@ -510,7 +510,7 @@ svg:hover #dark1 {
 
 .about-para {
   line-height: 24px;
-  font-size: 16px;
+  font-size: 1rem;
   color: white;
   width: 75%;
   margin-left: 50px;
@@ -530,7 +530,7 @@ svg:hover #dark1 {
 }
 
 .skills-label {
-  font-size: 16px;
+  font-size: 1rem;
   letter-spacing: 0.05em;
   color: white;
   line-height: 43px;
@@ -554,7 +554,7 @@ svg:hover #dark1 {
   display: grid;
   align-items: center;
   margin-bottom: 12.5px;
-  grid-template-columns: 135px auto;
+  grid-template-columns: 225px auto;
 }
 
 .progress {
